@@ -110,9 +110,12 @@ Here is the list of the tags:
     * ``tryton``: The main tag of the xml
 
     * ``data``: Define a set of data inside the file. It can have the
-      attributes ``noupdate`` to prevent the framework to update the records,
-      ``skiptest`` to prevent import of data when running tests and ``grouped``
-      to create records at the end with a grouped call.
+      attributes:
+        * ``noupdate`` to prevent the framework to update the records,
+        * ``skiptest`` to prevent import of data when running tests,
+        * ``depends`` to import data only if all modules in the comma separated
+          module list value are installed,
+        * ``grouped`` to create records at the end with a grouped call.
 
     * ``record``: Create a record of the model defined by the attribute
       ``model`` in the database. The ``id`` attribute can be used to refer to
