@@ -7,6 +7,7 @@ attlist.data &=
   [ a:defaultValue = "0" ] attribute noupdate { "0" | "1" }?
 attlist.data &=
   [ a:defaultValue = "0" ] attribute grouped { "0" | "1" }?
+attlist.data &= attribute depends { text }
 record = element record { attlist.record, field* }
 attlist.record &= attribute model { text }
 attlist.record &= attribute id { text }
